# Rose

./: .gitattributes  .gitignore  CMakeLists.txt  LICENCE  README.md
Examples/: BasicScene.cpp  FirstApplication.cpp
RoseEngine/: .clangd  CMakeLists.txt
RoseEngine/dependencies/glad/: CMakeLists.txt
RoseEngine/dependencies/glad/include/glad/: glad.h
RoseEngine/dependencies/glad/src/: glad.c
RoseEngine/src/: Rose.hpp  pch.hpp
RoseEngine/src/Rose/ComponentSystem/: Component.hpp  ComponentArray.cpp  ComponentArray.hpp  ComponentManager.hpp  GameObject.hpp  ObjectManager.cpp  ObjectManager.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
RoseEngine/src/Rose/Core/: Application.cpp  Application.hpp  Core.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Scene.cpp  Scene.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
RoseEngine/src/Rose/Events/: ApplicationEvent.cpp  ApplicationEvent.hpp  Event.cpp  Event.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp
RoseEngine/src/Rose/Graphics/: Buffer.cpp  Buffer.hpp  Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureParam.cpp  TextureParam.hpp  UIRenderer.cpp  UIRenderer.hpp
RoseEngine/src/Rose/Graphics/Assets/Shaders/: DefaultFrag.glsl  DefaultVert.glsl  TextFrag.glsl  TextVert.glsl
RoseEngine/src/Rose/Util/: File.cpp  File.hpp
docs/: (1)GettingStarted.md  (2)ECS.md  (3)Textures.md  (4)Events.md  (5)Timers.md  (6)Input.md  InstallationGuide.md
scripts/: createRoseProject.py
